--- a/sass/layout/_todo.scss
+++ b/sass/layout/_todo.scss
@@ -1,5 +1,9 @@
 .todo-section {
   padding-bottom: 94px;
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
   &__title {
     margin-bottom: 50px;
   }
