--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ ul li {
   list-style: none;
 }
 
-.button, .social-link__list, .header__container, .header__nav, .header__nav-list, .header__adress-list, .header__adress-link, .portfolio-buttons, .footer__input-container {
+.button, .social-link__list, .header__container, .header__nav, .header__nav-list, .header__adress-list, .header__adress-link, .about-section__icon-box, .our-clients__item, .footer__input {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -129,10 +129,30 @@ a {
 }
 
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 100%;
   margin: 0 auto;
+  padding: 0 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    background-color: #073030;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    background-color: #001a30;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    background-color: #002a4d;
+  }
 }
 
 .title-h2 {
@@ -179,13 +199,25 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
+  width: calc(100vw - 30px);
   height: auto;
   background-color: var(--white-font-color);
   border-radius: 4px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .modal__button {
@@ -467,21 +499,54 @@ a {
 }
 
 .about-section {
-  padding: 94px 0;
+  padding: 60px 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .about-section {
+    padding: 94px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about-section__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
+}
+
+.about-section__item {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .about-section__item {
+    width: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-section__item {
+    width: calc(100% / 4 - 30px);
+    margin-right: 30px;
+    margin-bottom: 0px;
+  }
 }
 
 .about-section__icon-box {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
-  margin-bottom: 30px;
   text-align: center;
-  padding: 25px 100px;
+  margin-bottom: 30px;
 }
 
 .about-section__title {
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .about-section__text {
@@ -491,20 +556,37 @@ a {
   color: var(--second-font-color);
 }
 
-.about-section__list {
-  display: flex;
-}
-
-.about-section__item {
-  max-width: 270px;
-}
-
 .about-section__item:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .about-section__item:not(:last-child) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about-section__item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-section__item:nth-child(-n + 2) {
+    margin-bottom: 0px;
+  }
 }
 
 .todo-section {
   padding-bottom: 94px;
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .todo-section {
+    display: block;
+  }
 }
 
 .todo-section__title {
@@ -542,19 +624,31 @@ a {
 
 .ourteam-section {
   background-color: #f5f4fa;
-  padding: 94px 0;
+  padding: 60px 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .ourteam-section {
+    padding: 94px 0;
+  }
 }
 
 .ourteam-section__main-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
-.ourteam-section__list {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .ourteam-section__main-title {
+    margin-bottom: 50px;
+  }
 }
 
-.ourteam-section__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .ourteam-section__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 }
 
 .ourteam-section__item {
@@ -562,6 +656,39 @@ a {
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   padding-bottom: 30px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .ourteam-section__item {
+    width: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .ourteam-section__item {
+    width: calc(100% / 4 - 30px);
+    margin-right: 30px;
+    margin-bottom: 0px;
+  }
+}
+
+.ourteam-section__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .ourteam-section__item:not(:last-child) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .ourteam-section__item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
 }
 
 .ourteam-section__bottom-wrap {
@@ -587,31 +714,73 @@ a {
 }
 
 .our-clients {
-  padding-top: 73px;
-  padding-bottom: 94px;
+  padding: 60px 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients {
+    padding: 94px 0;
+  }
 }
 
 .our-clients__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients__title {
+    margin-bottom: 50px;
+  }
 }
 
 .our-clients__list {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  margin-right: -30px;
 }
 
-.our-clients__item + .our-clients__item {
-  margin-left: 30px;
+.our-clients__item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  width: calc(100% / 2 - 30px);
+}
+
+@media screen and (min-width: 768px) {
+  .our-clients__item {
+    width: calc(100% / 3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients__item {
+    width: calc(100% / 6 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients__item {
+    margin-bottom: 0px;
+  }
+}
+
+.our-clients__item:nth-last-child(-n + 2) {
+  margin-bottom: 0px;
+}
+
+@media screen and (min-width: 768px) {
+  .our-clients__item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .our-clients__link {
   display: block;
-  width: 170px;
-  height: 90px;
+  width: 100%;
+  height: 92px;
   border: 1px solid var(--svg-grey-color);
   border-radius: 4px;
-  padding: 16px 32px;
+  padding: 16px 0;
+  text-align: center;
   color: var(--svg-grey-color);
   transition-property: color, background-color;
   transition-duration: 250ms;
@@ -629,6 +798,13 @@ a {
 
 .todo-section {
   padding-bottom: 94px;
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .todo-section {
+    display: block;
+  }
 }
 
 .todo-section__title {
@@ -665,15 +841,26 @@ a {
 }
 
 .portfolio {
-  padding: 94px 0;
+  padding: 60px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio {
+    padding: 94px 0;
+  }
 }
 
 .portfolio__list {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  margin-right: -30px;
-  margin-bottom: -30px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__list {
+    margin-right: -30px;
+    margin-bottom: -30px;
+  }
 }
 
 .portfolio__card-bottom {
@@ -681,8 +868,7 @@ a {
 }
 
 .portfolio__item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-right: 30px;
+  flex-basis: 100%;
   margin-bottom: 30px;
   background: var(--white-font-color);
   border: 1px solid #eeeeee;
@@ -691,9 +877,33 @@ a {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__item {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-right: 30px;
+  }
+}
+
 .portfolio__item:hover, .portfolio__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   opacity: inherit;
+}
+
+.portfolio__item:last-child {
+  margin-bottom: 0px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .portfolio__pic {
@@ -739,7 +949,30 @@ a {
 }
 
 .portfolio-buttons {
-  margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-buttons {
+    margin-bottom: 14px;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-buttons {
+    margin-bottom: 34px;
+  }
+}
+
+.portfolio-buttons__item:nth-child(-n + 3) {
+  margin-bottom: 15px;
+}
+
+.portfolio-buttons__item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .portfolio-buttons__btn {
@@ -769,23 +1002,37 @@ a {
   color: var(--white-font-color);
 }
 
-.portfolio-buttons__item:not(:last-child) {
-  margin-right: 8px;
-}
-
 .footer {
   background-color: var(--second-background-color);
   padding-bottom: 60px;
   padding-top: 60px;
 }
 
-.footer > .container {
+.footer__container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
 }
 
-.footer__adress-wrap {
-  margin-right: 70px;
+@media screen and (min-width: 768px) {
+  .footer__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    justify-content: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__adress-wrap {
+    margin-right: 70px;
+  }
 }
 
 .footer__logo--white {
@@ -794,7 +1041,16 @@ a {
 
 .footer__logo {
   display: block;
+  text-align: center;
   margin-bottom: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__logo {
+    text-align: left;
+  }
 }
 
 .footer__location-link {
@@ -813,17 +1069,37 @@ a {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.footer__item {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__item {
+    text-align: left;
+  }
+}
+
 .footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer__social-link-wrap {
-  margin-right: 93px;
+@media screen and (min-width: 1200px) {
+  .footer__social-link-wrap {
+    margin-right: 93px;
+  }
 }
 
 .footer__title {
   color: var(--white-font-color);
   margin-bottom: 20px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__title {
+    text-align: left;
+  }
 }
 
 .footer__social-link {
@@ -837,6 +1113,7 @@ a {
   transition-property: color, background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 60px;
 }
 
 .footer__svg {
@@ -847,9 +1124,14 @@ a {
   background-color: var(--brand-color);
 }
 
+.footer__input-container {
+  width: 480px;
+}
+
 .footer__input {
+  display: block;
   background-color: transparent;
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -857,11 +1139,24 @@ a {
   border-radius: 4px;
   font-size: 16px;
   line-height: 1.25;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   padding: 15px;
+  margin: 0px auto 20px auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__input {
+    width: 358px;
+    margin: 0px 12px 0px 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__input-container {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .footer-button-container {
