--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,21 @@
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  // width: 1200px;
+  // padding-left: 15px;
+  // padding-right: 15px;
+  width: 100%;
   margin: 0 auto;
+  padding: 0 15px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+
+    background-color: rgb(7, 48, 48);
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    background-color: rgb(0, 26, 48);
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    background-color: rgb(0, 42, 77);
+  }
 }
