--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,13 +24,21 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
+  width: calc(100vw - 30px);
+
   height: auto;
   background-color: var(--white-font-color);
   border-radius: 4px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 
   &__button {
     position: absolute;
