--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,16 +1,44 @@
 .about-section {
-  padding: 94px 0;
+  padding: 60px 0;
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
+
+  &__list {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-right: -30px;
+    }
+  }
+
+  &__item {
+    // max-width: 270px;
+    width: 100%;
+    @media screen and (min-width: 768px) {
+      width: calc(100% / 2 - 30px);
+      margin-right: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc(100% / 4 - 30px);
+      margin-right: 30px;
+      margin-bottom: 0px;
+    }
+  }
   &__icon-box {
-    width: 270px;
+    // width: 270px;
+    width: 100%;
     height: 120px;
     background-color: #f5f4fa;
     border-radius: 4px;
-    margin-bottom: 30px;
     text-align: center;
-    padding: 25px 100px;
+    margin-bottom: 30px;
+    // padding: 25px 100px;
+    @extend %flexCenter;
   }
   &__title {
     margin-bottom: 10px;
+    text-align: center;
   }
   &__text {
     font-size: 14px;
@@ -18,15 +46,20 @@
     letter-spacing: 0.03em;
     color: var(--second-font-color);
   }
-  &__list {
-    display: flex;
-  }
-
-  &__item {
-    max-width: 270px;
-  }
 
   &__item:not(:last-child) {
-    margin-right: 30px;
+    // margin-right: 30px;
+    margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+    }
+  }
+  &__item:nth-child(-n + 2) {
+    @media screen and (min-width: 768px) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0px;
+    }
   }
 }
