--- a/sass/layout/_ourteam.scss
+++ b/sass/layout/_ourteam.scss
@@ -1,16 +1,27 @@
 .ourteam-section {
   background-color: #f5f4fa;
-  padding: 94px 0;
+  padding: 60px 0;
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
   &__main-title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
   }
   &__list {
-    display: flex;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-right: -30px;
+    }
   }
 
-  &__item:not(:last-child) {
-    margin-right: 30px;
-  }
+  // &__item:not(:last-child) {
+  //   // margin-right: 30px;
+  //   margin-bottom: 30px;
+  // }
 
   &__item {
     background: var(--white-font-color);
@@ -18,6 +29,29 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     padding-bottom: 30px;
+    width: 100%;
+    margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+      width: calc(100% / 2 - 30px);
+      margin-right: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc(100% / 4 - 30px);
+      margin-right: 30px;
+      margin-bottom: 0px;
+    }
+  }
+  &__item:not(:last-child) {
+    // margin-right: 30px;
+    margin-bottom: 30px;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0px;
+    }
+  }
+  &__item:nth-last-child(-n + 2) {
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+    }
   }
 
   &__bottom-wrap {
