--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,31 +1,57 @@
 .portfolio {
-  padding: 94px 0;
+  padding: 60px 0;
+  @media screen and (min-width: 768px) {
+    padding: 94px 0;
+  }
+  // &.container {
+  //   display: 100vw;
+  // }
+
   &__list {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    margin-right: -30px;
-    margin-bottom: -30px;
+
+    @media screen and (min-width: 768px) {
+      margin-right: -30px;
+      margin-bottom: -30px;
+    }
   }
   &__card-bottom {
     padding: 20px 24px;
   }
 
   &__item {
-    flex-basis: calc(100% / 3 - 30px);
-    margin-right: 30px;
+    flex-basis: 100%;
     margin-bottom: 30px;
     background: var(--white-font-color);
     border: 1px solid #eeeeee;
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width: 768px) {
+      flex-basis: calc(100% / 2 - 30px);
+      margin-right: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc(100% / 3 - 30px);
+      margin-right: 30px;
+    }
   }
   &__item:hover,
   &__item:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     opacity: inherit;
+  }
+  &__item:last-child {
+    margin-bottom: 0px;
+  }
+
+  &__item:nth-last-child(-n + 3) {
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0px;
+    }
   }
 
   &__pic {
@@ -71,8 +97,23 @@
 }
 
 .portfolio-buttons {
-  @extend %flexCenter;
-  margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 14px;
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 34px;
+  }
+  // margin-bottom: 50px;
+}
+.portfolio-buttons__item:nth-child(-n + 3) {
+  margin-bottom: 15px;
+}
+.portfolio-buttons__item:not(:last-child) {
+  margin-right: 8px;
 }
 .portfolio-buttons__btn {
   background: #f5f4fa;
@@ -99,7 +140,4 @@
 .portfolio-buttons__btn--active {
   background: var(--brand-color);
   color: var(--white-font-color);
-}
-.portfolio-buttons__item:not(:last-child) {
-  margin-right: 8px;
 }
