--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -8,14 +8,14 @@
   @media screen and (min-width: 480px) {
     width: 480px;
 
-    background-color: rgb(7, 48, 48);
+    // background-color: rgb(182, 224, 224);
   }
   @media screen and (min-width: 768px) {
     width: 768px;
-    background-color: rgb(0, 26, 48);
+    // background-color: rgb(0, 26, 48);
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
-    background-color: rgb(0, 42, 77);
+    // background-color: rgb(0, 42, 77);
   }
 }
