--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,10 +4,11 @@
 
   &__container {
     @extend %flexCenter;
+    padding: 16px 15px;
   }
   &__logo {
-    padding: 25px 0px;
-    margin-right: 93px;
+    // padding: 25px 0px;
+    // margin-right: 93px;
     display: block;
   }
   &__logo--second-word {
@@ -19,14 +20,37 @@
     color: #000000;
   }
   &__nav {
-    @extend %flexCenter;
-    margin-right: 305px;
-    /* margin-right: auto; */
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 305px;
+    }
+  }
+  //   @extend %flexCenter;
+  //   margin-right: 305px;
+  //   /* margin-right: auto; */
+  &__nav-list {
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  &__nav-item {
+    padding: 32px 0;
+    display: flex;
+    justify-content: flex-start;
+    @media screen and (min-width: 480px) {
+    }
   }
   &__nav-link,
   &__adress-link {
     display: block;
-    padding: 32px 0;
+    @media screen and (min-width: 768px) {
+      padding: 32px 0;
+    }
   }
 
   &__nav-list,
@@ -35,26 +59,32 @@
     @extend %flexCenter;
   }
   &__nav-item:not(:last-child) {
-    margin-right: 50px;
+    @media screen and (min-width: 1200px) {
+      margin-right: 50px;
+    }
   }
 
   &__nav-item &__nav-link:hover,
   &__nav-item &__nav-link:focus,
   &__adress-item &__adress-link:hover,
   &__adress-item &__adress-link:focus {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
     color: var(--brand-color);
   }
 
   &__nav-link {
     @extend %mainTransition;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 40px;
+    line-height: 1.175;
+    text-align: center;
     letter-spacing: 0.02em;
+    @media screen and (min-width: 768px) {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+    }
+
     color: var(--main-font-color);
   }
 
@@ -73,6 +103,12 @@
     border-radius: 2px;
     margin-bottom: -1px;
   }
+  &__adress-list {
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
+  }
   &__adress-link {
     @extend %mainTransition;
     font-weight: 500;
@@ -82,13 +118,92 @@
     color: var(--second-font-color);
     text-align: center;
   }
-
+  &__adress-item {
+    @media screen and (min-width: 480px) {
+      display: flex;
+      justify-content: flex-start;
+    }
+  }
   &__adress-item:not(:last-child) {
-    margin-right: 30px;
+    margin-bottom: 32px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
   }
 
   &__icon {
     margin-right: 10px;
     fill: currentColor;
   }
+}
+.header-open-btn {
+  margin-left: auto;
+  padding: 0;
+  background: none;
+  border: 0;
+  @extend %flexCenter;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+.mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--white-font-color);
+  width: 100%;
+  height: 100%;
+}
+.mob-menu > .container {
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0px 0 134px 40px;
+}
+// .mob-menu-wrap {
+//   display: flex;
+//   align-items: space-between;
+// }
+.header__adress-link-mob-tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--second-font-color);
+}
+.header__adress-link-mob-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: var(--second-font-color);
+}
+.header__adress-link-mob-tel:hover,
+.header__adress-link-mob-tel:focus,
+.header__adress-link-mob-mail:hover,
+.header__adress-link-mob-mail:focus {
+  color: var(--brand-color);
+}
+
+.header-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+  // margin: 10px 0px 0px auto;
+  padding: 0;
+  background: none;
+  border: 0;
+  @extend %flexCenter;
+}
+
+.mob-menu.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
