fixed header margin in tablet version

--- a/css/main.css
+++ b/css/main.css
@@ -61,10 +61,17 @@ ul li {
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--brand-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .button {
@@ -410,7 +417,7 @@ a {
 
 @media screen and (min-width: 768px) {
   .header__container {
-    padding: 0;
+    padding: 0 15px;
   }
 }
 
@@ -432,12 +439,18 @@ a {
 }
 
 .header__logo--second-word {
-  font-family: 'Raleway', sans-serif;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #000000;
+}
+
+@media screen and (min-width: 1200px) {
+  .header__logo--second-word {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -472,7 +485,7 @@ a {
   justify-content: flex-start;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .header__nav-link {
     margin-bottom: 32px;
   }
@@ -563,11 +576,18 @@ a {
 
 .header__adress-link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--second-font-color);
   text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .header__adress-link {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -746,13 +766,14 @@ a {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  max-width: 696px;
+  max-width: 360px;
   margin: 0 auto;
   margin-bottom: 30px;
 }
 
 @media screen and (min-width: 1200px) {
   .section-hero__title {
+    max-width: 696px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
