--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,7 +6,7 @@
     @extend %flexCenter;
     padding: 16px 15px;
     @media screen and (min-width: 768px) {
-      padding: 0;
+      padding: 0 15px;
     }
   }
   &__logo {
@@ -20,12 +20,15 @@
     display: block;
   }
   &__logo--second-word {
-    font-family: 'Raleway', sans-serif;
     font-weight: bold;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     color: #000000;
+    @media screen and (min-width: 1200px) {
+      font-size: 26px;
+      line-height: 1.19;
+    }
   }
   &__nav {
     @media screen and (min-width: 768px) {
@@ -56,7 +59,7 @@
     }
   }
   &__nav-link {
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       margin-bottom: 32px;
     }
     @media screen and (min-width: 768px) {
@@ -138,11 +141,15 @@
   &__adress-link {
     @extend %mainTransition;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     color: var(--second-font-color);
     text-align: center;
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.14;
+    }
   }
 
   &__adress-item {
